fix: various minor aligmnet/font/overflow tweaks

--- a/src/components/BookInfo/BookInsightCard/BookInsightCard.module.scss
+++ b/src/components/BookInfo/BookInsightCard/BookInsightCard.module.scss
@@ -20,7 +20,7 @@
     border-radius: 50%;
     margin-right: 30px;
     p {
-      color: white !important;
+      color: white;
     }
   }
 }
