--- a/src/components/BookInfo/BookInsights/BookInsights.module.scss
+++ b/src/components/BookInfo/BookInsights/BookInsights.module.scss
@@ -4,7 +4,6 @@
 .smHeader {
   box-shadow: 0px 2px 2.62px rgba(0, 0, 0, 0.23);
   border-bottom: 10px solid #a0ebe7;
-  color:#394167;
 }
 
 .pageContainer {
