--- a/src/components/BottomNavBar/BottomNavBar.module.scss
+++ b/src/components/BottomNavBar/BottomNavBar.module.scss
@@ -9,12 +9,12 @@
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    height: 8vh;
+    min-height: 8vh;
     background-color: $offWhite;
     box-shadow: 0px -2px 2.62px rgba(0, 0, 0, 0.23);
 
     .iconContainer {
-        padding: 20px;
+        padding: 10px;
 
         .navBarIcons {
 
